# warframe-tracker

./: .gitignore  .gitmodules  README.md  app.py  electron.vite.config.ts  index.html  main.py  new_app.py  package-lock.json  package.json  pyproject.toml  run.mts  tsconfig.json
api/: crafting.py  user_db.py
api/schemas/: recipes.py  resources.py  warframes.py
assets/: item_cell.qss  style.css
backend/: app.py
backend/assets/: app.css  completion.js  item_card.css  item_modal.css  mastery_toolbar.css
backend/caches/: __init__.py  item_cache.py  item_card_cache.py
backend/components/: __init__.py  item_card.py  item_modal.py  mastery_toolbar.py  prime_filter.py
backend/schemas/: __init__.py  common.py  item.py
data/: README.md
docs/: warframe-items-migration.md
domain/: __init__.py  images.py  loader.py
domain/models/: ___init__.py  __init__.py  common.py  item.py  warframe.py  weapon.py
electron/: main.js  main.ts  package-lock.json  package.json  preload.ts
experiments/: matching.ipynb
infra/: __init__.py  image_loader.py
scripts/: scrape_data.py  update-vendor.sh  update_data.py
src/: App.css  App.tsx
src/components/: ContextMenu.css  ContextMenu.tsx  ItemCard.css  ItemCard.tsx  ItemModal.css  ItemModal.tsx  PrimeJunkCard.css  PrimeJunkCard.tsx  PrimePartCard.css  PrimePartCard.tsx  ProgressBar.css  ProgressBar.tsx  SaveButton.css  SaveButton.tsx
src/data/: items.ts  (+1 more)
state/: __init__.py  store.py
static/: styles.css
ui/: __init__.py  component_label.py  item_cell.py  item_page.py  primary_page.py  toolbar.py  warframes_page.py
(+31 files in other folders)
