[project]
name = "warframe-tracker"
version = "0.1.0"
description = "My personal Warframe tracker."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pyside6>=6.11.1",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
    "ty>=0.0.51",
]

[tool.ruff]
line-length = 150

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D107",  # Missing docstring in __init__
    "FBT001",  # Boolean parameters
    "FBT003",  # Boolean parameters
    "N802",  # Pascal Case
]
