[project]
name = "warframe-tracker"
version = "0.1.0"
description = "Local Warframe mastery tracker application, built for Linux."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=4.3,<4.4",
    "loguru>=0.7,<0.8",
    "pydantic>=2.13,<2.14"
]

[dependency-groups]
dev = [
    "ruff>=0.15,<0.16",
    "ty==0.0.53",
]